--- a/euroformix_2.0.4/DESCRIPTION
+++ b/euroformix_2.0.4/DESCRIPTION
@@ -5,12 +5,7 @@ Version: 2.0.4
 Date: 2018-11-06
 Author: Oyvind Bleka <oyvble@hotmail.com>
 Maintainer: Oyvind Bleka <oyvble@hotmail.com>
-Description: euroformix contains procedures for maximization, integration and
-    MCMC of likelihoods of a continuous model for replicated STR DNA mixtures
-    for a general specifications of hypotheses. It also does deconvolution
-    condition on the continuous model. The continuous model takes care of
-    drop-out, drop-in, stutters and degradation. It also contains the graphical
-    layer efm.
+Description: euroformix contains procedures for maximization, integration and MCMC of likelihoods of a continuous model for replicated STR DNA mixtures for a general specifications of hypotheses. It also does deconvolution condition on the continuous model. The continuous model takes care of drop-out, drop-in, stutters and degradation. It also contains the graphicallayer efm.
 License: GPL(>=2)
 Depends: R (>= 3.0.1)
 LinkingTo: BH,Rcpp,RcppArmadillo
