--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: euroformix
 Type: Package
 Title: A Quantitative Model for Interpreting DNA Mixtures
-Version: 3.1.0
-Date: 2020-08-13
+Version: 3.2.0
+Date: 2020-02-17
 Author: Oyvind Bleka <oyvble@hotmail.com>
 Maintainer: Oyvind Bleka <oyvble@hotmail.com>
 Description: Contains procedures for maximization, integration and MCMC of likelihoods of a quantitative model for DNA mixtures (STR/SNP) for a general specifications of hypotheses. It also contains procedures for estimating the profiles of unknown contributors (deconvolution). The implemented model takes care of drop-out, drop-in, degradation, stutters (both backward and forward). It also contains a graphical user interface (efm) to ease the use.
@@ -11,13 +11,12 @@ NeedsCompilation: yes
 License: GPL(>=2)
 Depends: R (>= 3.0.1)
 LinkingTo: BH
-Imports: 
-	gWidgets,
+Suggests: 
+	gWidgets2,
 	cubature,
     forensim,
     RCurl,
     XML,
-    plotly
-Suggests: 
+    plotly,
     testthat
 RoxygenNote: 6.1.1
