--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: euroformix
 Type: Package
 Title: A Quantitative Model for Interpreting DNA Mixtures
-Version: 3.3.3
-Date: 2021-10-14
+Version: 3.4.0
+Date: 2022-02-05
 Author: Oyvind Bleka <oyvble@hotmail.com>
 Maintainer: Oyvind Bleka <oyvble@hotmail.com>
-Description: Contains procedures for maximization, integration and MCMC of likelihoods of a quantitative model for DNA mixtures (STR/SNP) for a general specifications of hypotheses. It also contains procedures for estimating the profiles of unknown contributors (deconvolution). The implemented model takes care of drop-out, drop-in, degradation, stutters (both backward and forward). It also contains a graphical user interface (efm) to ease the use.
+Description: Contains procedures for maximization, integration and MCMC of likelihoods of a quantitative model for DNA mixtures for a general specifications of hypotheses. It also contains procedures for estimating the profiles of unknown contributors. The implemented model takes care of drop-out, drop-in, degradation, stutters (both backward and forward). It also contains a graphical user interface to ease the use.
 URL: http://euroformix.com/
 NeedsCompilation: yes 
 License: GPL(>=2)
@@ -14,8 +14,7 @@ Suggests:
 	gWidgets2,
 	cubature,
     forensim,
-    RCurl,
+    curl,
     XML,
     plotly,
     testthat
-RoxygenNote: 6.1.1
